Study_Spring/ResponseUtils/src/main/java/com/example/ResponseUtils/response/error/UnauthorizedException.java
package com.example.ResponseUtils.response.error;

public class UnauthorizedException extends RuntimeException{
    public UnauthorizedException(ErrorResponseStatus status){
        super(status.getMessage());
    }
}
